<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context=".PromoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_toolbar"
        android:orientation="horizontal"

        >

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/toolbar_merchant_promo"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="normal"

            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView

                android:id="@+id/promo_image_detail_id"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/bann_2"


                />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Diskon 20 % at Kedai Hape Original, Mall Kota Kasablanka"
                android:textColor="@color/color_black_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/label_valid_date"

                />



            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="10 - 31 Januari 2019"

                />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="Voucher Code"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/my_custom_border"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:gravity="center"

                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="0.2"
                    >
                    <android.support.v7.widget.AppCompatTextView
                        android:background="@color/color_background_bottom_footnote"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"

                        android:textStyle="bold"
                        android:text="BIRTHDAY9"
                        android:textColor="@color/color_black_text"
                        android:layout_gravity="center"
                        android:gravity="center"
                        />
                </LinearLayout>

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_background_bottom_footnote"
                    >

                </View>


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:layout_weight="0.8"
                    android:textStyle="bold"
                    android:text="COPY"
                    android:background="@color/color_white"
                    android:textColor="@color/color_orange_text"
                    android:layout_gravity="center"
                    android:gravity="center"

                    />


            </LinearLayout>


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="Term &amp; Condition"
                android:layout_marginBottom="5dp"
                />




            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/termcondi_1"

                />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/termcondi_2"

                />


             <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/termcondi_3"

                />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/termcondi_4"

                />



            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/termcondi_1"

                />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/color_grey_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/termcondi_5"

                />




        </LinearLayout>


    </ScrollView>


</LinearLayout>